seemingly correct MIS

--- a/application.css
+++ b/application.css
@@ -39,6 +39,16 @@ canvas {
     border: none;
 }
 
+canvas.debug {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 10;
+}
+
 input {
     border-width: 0 0 1px 0;
     text-align: right;
